[project]
name = "boltz"
version = "0.4.2"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Shu Li", email = "zetarylee@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "biopython>=1.85",
    "click>=8.1.8",
    "dm-tree>=0.1.9",
    "einops>=0.8.1",
    "einx>=0.3.0",
    "fairscale>=0.4.13",
    "hydra-core>=1.3.2",
    "lightning>=2.5.0.post0",
    "mashumaro>=3.15",
    "modelcif>=1.3",
    "numba>=0.61.0",
    "numpy>=2.1.3",
    "pandas>=2.2.3",
    "pyyaml>=6.0.2",
    "rdkit>=2024.9.5",
    "requests>=2.32.3",
    "scipy>=1.15.2",
    "torch>=2.6.0",
    "types-requests>=2.32.0.20241016",
    "wandb>=0.19.7",
]

[project.scripts]
boltz = "boltz.main:cli"

[project.optional-dependencies]
lint = [
    "ruff>=0.9.7",
]
test = [
    "pytest>=8.3.4",
    "requests>=2.32.3",
]
accelerate = [
    "deepspeed>=0.16.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
